plugins { id 'java' }
group = 'ru.example'
version = '1.0.0'

repositories {
    mavenCentral()
    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
    compileOnly project(':vkchat_core')
    implementation 'org.json:json:20230227'
}

tasks.withType(JavaCompile) { options.encoding = 'UTF-8'; options.release = 17 }
